# gllabel

./: .gitignore  CMakeLists.txt  Demo  Makefile  README.md  build.sh  demo.cpp  label.cpp  warpfs.glsl  warpvs.glsl
cmake/: FindGLM.cmake
demo/: CMakeLists.txt  LICENSE.txt  demo.cpp
include/gllabel/: gllabel.hpp  glwrappers.hpp
lib/: CMakeLists.txt  gllabel.cpp  label.cpp  types.cpp  vgrid.cpp
lib/include/gllabel/: label.hpp  vgrid.hpp
src/: CMakeLists.txt  gridglyph.cpp  label.cpp  types.cpp
src/include/gllabel/: gridglyph.hpp  label.hpp
